crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enums__enum_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/enums.rs
assertion_line: 18
expression: "goto_definition(r#\"\n%! main.sp\nenum Foo {\n    Bar\n     |\n     ^\n}\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    }
  }
]
